# egui-maligog

./: Cargo.toml  rust-toolchain
egui-maligog/: Cargo.toml  build.rs
egui-maligog/src/: lib.rs
egui-maligog/tests/: lib.rs
shader/: Cargo.toml
shader/src/: lib.rs
