[package]
name = "egui-maligog"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maligog = { path = "../../maligog" }
bytemuck = { version = "1.5.1", features = ["derive"] }
maplit = "1.0"
egui = "0.12"
log = "0.4.14"
backtrace = "0.3"

[build-dependencies.spirv-builder]
git = "https://github.com/EmbarkStudios/rust-gpu"
rev = "c3eff4d4a5a52607aa3bc8b4ba8409f6659425ee"
default-features = false
features = ["use-installed-tools"]

[dev-dependencies]
env_logger = "0.8.3"
winit = "0.24"
egui_winit_platform = "0.7.0"
