[package]
name = "egui-maligog"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maligog = { path = "../../maligog" }
bytemuck = { version = "1.7", features = ["derive"] }
maplit = "1.0"
egui = "0.12"
log = "0.4.14"
backtrace = "0.3"

[build-dependencies.spirv-builder]
git = "https://github.com/EmbarkStudios/rust-gpu"
rev = "f224b5aa1a5e73d0128d23d4bb75b8c23911f180"
default-features = false
features = ["use-installed-tools"]

[dev-dependencies]
env_logger = "0.8.3"
winit = "0.25"
egui_winit_platform = "0.8.0"
